--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,14 @@ numpy<2
 sentencepiece
 requests
 beautifulsoup4
+langchain-community
+langchain
+tiktoken
+unstructured
+newspaper3k
+lxml[html_clean]
+fastapi
+uvicorn
+jinja2
+python-multipart
+websockets
